--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 PRIMARY_KEY=primary
+DB_URL=postgres://admin:pPEa4tHxOlTzpeFCUmGm3ywgcO5TRXtu@dpg-cnpf2k0l6cac73a789g0-a.oregon-postgres.render.com/blog_glpi
